# School-Management

./: .gitignore  README.md  docker-compose.yml  run_tests.sh
backend/: .gitignore  Dockerfile  alembic.ini  conftest.py  create_superuser.py  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 79f32b673d7b_initial_migration.py
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/core/: auth.py  database.py
backend/app/crud/: base.py  library.py  student.py  user.py
backend/app/models/: base.py  library.py  student.py  user.py
backend/app/routers/: auth.py
backend/app/schemas/: base.py  library.py  student.py  user.py
backend/apps/academic/: models.py  serializers.py  urls.py  views.py
backend/apps/academic/migrations/: 0001_initial.py
backend/apps/academic/tests/: test_academic_year.py
backend/apps/accounts/: models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/accounts/tests/: test_auth.py  test_students.py
backend/apps/communication/: models.py  serializers.py  urls.py  views.py
backend/apps/core/: apps.py  exceptions.py  logging_config.py  models.py  permissions.py  signals.py
backend/apps/finance/: models.py  serializers.py  urls.py  views.py
backend/config/: celery.py  settings.py  urls.py
backend/scripts/: create_test_tenant.py  setup_test_db.py  setup_test_env.py  setup_test_tenant.py
backend/tests/: conftest.py  test_auth.py  test_library.py  test_students.py
frontend/: Dockerfile  next.config.js  (+3 more)
(+172 files in other folders)
